+ ArrayQueue homework